[package]
name = "dagproxy"
version = "0.1.0"
edition = "2024"

[dependencies]
netaddr2 = "0.10.0"
netwatcher = "0.4.0"
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0.100"
httparse = "1.10.1"
bytes = "1.10.1"
backon = "1.5.2"
base64 = "0.22.1"
cross-krb5 = "0.4.2"
rcgen = {  version = "0.14.5", features = ["default", "x509-parser"] }
chrono = "0.4.42"
time = "0.3.44"
join-string = "0.3.0"
#curl = { version = "0.4.49", features = ["ssl", "spnego"] }
